--- a/src/report/WeightCard.rdl
+++ b/src/report/WeightCard.rdl
@@ -11,7 +11,7 @@
       <am:Name>MSRB</am:Name>
       <am:Version>15.1.30001.02</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2026-02-05T09:48:27.8418357Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2026-02-06T18:31:50.6878650Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <AutoRefresh>0</AutoRefresh>
   <DataSources>
@@ -41,7 +41,6 @@
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
-                        <rd:Selected>true</rd:Selected>
                         <Rectangle Name="Rectangle1">
                           <ReportItems>
                             <Tablix Name="Tablix2">
@@ -348,7 +347,7 @@
                                               <Paragraph>
                                                 <TextRuns>
                                                   <TextRun>
-                                                    <Value>=Parameters!RegistrationPlatebl.Value</Value>
+                                                    <Value>=Parameters!RegistrationPlateLbl.Value</Value>
                                                     <Style />
                                                   </TextRun>
                                                 </TextRuns>
@@ -978,7 +977,7 @@
                                 <Paragraph>
                                   <TextRuns>
                                     <TextRun>
-                                      <Value>=Parameters!LocationSignage.Value</Value>
+                                      <Value>=Parameters!LocationSignageLbl.Value</Value>
                                       <Style>
                                         <TextDecoration>Underline</TextDecoration>
                                       </Style>
